--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -236,7 +236,7 @@ En remarque supplémentaire, l'approximation quasi-TEM est indispensable car cel
 \newpage
 
 \subsection{Caractérisation faible bande des lignes micro-rubans}
-La partie précédente s'est chargée  de détailler une première démarche pour caractériser une ligne micro-ruban. Elle s'appuie sur la correspondance entre un modèle théorique simulé sous ADS et des mesures pratiques. La mise en place d'une simulation nécessite d'avoir sous la main des outils logiciels complexe. Dans cette partie, une seconde méthode, plus simple, dite de "coin de table" va être présentée. Elle a l'avantage de faire appel uniquement à des calculs simples. En contrepartie le résultat obtenue n'est valable que sur une partie de la bande passante. Les équations utilisées se base sur un modèle de substrat sans pertes où $tan( \delta)$ est négligé. Ainsi, seule la constante diélectrique $\varepsilon_r$ est obtenue avec cette méthode. \\
+La partie précédente s'est chargée de détailler une première démarche pour caractériser une ligne micro-ruban. Elle s'appuie sur la correspondance entre un modèle théorique simulé sous ADS et des mesures pratiques. La mise en place d'une simulation nécessite d'avoir sous la main des outils logiciels complexes. Dans cette partie, une seconde méthode, plus simple, dite de "coin de table" va être présentée. Elle a l'avantage de faire appel uniquement à des calculs simples. En contrepartie le résultat obtenue n'est valable que sur une partie de la bande passante. Les équations utilisées se base sur un modèle de substrat sans pertes où $tan( \delta)$ est négligé. Ainsi, seule la constante diélectrique $\varepsilon_r$ est obtenue avec cette méthode. \\
 La mesure s'effectue comme pour la méthode précédente sur une ligne micro-ruban de longueur l, de hauteur h et largeur w connues comme sur la figure \ref{fig:modele_microstrip}. Nous prendront l'exemple de la ligne de teflon large déjà caractérisée dont les données sont disponibles dans le tableau \ref{tab:geo_ligne}. Le coefficient de réflexion $S_{11}$ de cette ligne lorsqu’elle est chargée par 50$\Omega$ en sortie est le suivant :
 \begin{figure}[H]
 	\centering
@@ -272,7 +272,7 @@ Le résultat de l'application numérique avec h = 1,58mm, w = 7,87mm et L=74,83m
 
 
 
-\section{Synthèse de filtre passe-bas en technologie}
+\section{Synthèse de filtre passe-bas Tchebychev en technologie micro-ruban}
 
 
 L'objectif est de réaliser un filtre passe-bas dont le gabarit est donné à la figure \ref{fig:gabarit_PasseBas} avec une réponse de Tchebychev.
@@ -494,8 +494,21 @@ Le tableau ci-dessous donne les applications numériques pour les composants du 
 	%	\label{fig:observation_registres_internes}
 \end{figure}
 
+\newpage
 
+\section{Synthèse d'un filtre passe-bas elliptique en technologie micro-ruban}
 
+\subsection{Avant-propos : rappel du cahier des charges}
+
+\subsection{Synthèse du filtre passe-bas en éléments localisés}
+
+\subsection*{Validations}
+
+\subsection{Transposition du filtre passe-bas en technologie micro-ruban}
+
+\subsection*{Validations}
+
+\newpage
 
 \section{synthèse d'un filtre passe-bande}
 
