--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -723,14 +723,6 @@ Il existe une méthode détaillée dans le \textit{cours de filtrage actif} de V
 
 
 
-
-
-
-
-
-
-
-
 Une fois le coefficient de dénormalisation appliqué nous obtenons les valeurs suivantes.
 
 \begin{table}[H]
@@ -745,6 +737,9 @@ Une fois le coefficient de dénormalisation appliqué nous obtenons les valeurs 
 	\caption{Valeurs réelles des composants du filtre passe-bas.}
 	\label{tab:valeurs_composant_passe_bas}
 \end{table}
+
+\newpage
+\section{Synthèse d'amplificateur}
 
 \cite{cours_MF} \cite{cours_HF}
 \bibliography{bib_hf}{}
