maj biblio datasheet

--- a/rapport/bib_hf.bib
+++ b/rapport/bib_hf.bib
@@ -17,4 +17,16 @@
   school      = {Polytech Nantes},
 }
 
+@Manual{data_fr4,
+  title        = {Technical datasheet FR-4},
+  note         = {www.laminatedplastics.com},
+  organization = {Laminated Plastics},
+}
+
+@Manual{data_PTFE,
+  title        = {Technical datasheet PTFE board},
+  note         = {www.cif.fr},
+  organization = {CIF},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
