--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -746,7 +746,7 @@ Une fois le coefficient de dénormalisation appliqué nous obtenons les valeurs 
 	\label{tab:valeurs_composant_passe_bas}
 \end{table}
 
-\cite{cours_MF} \cite{cours_HF}
+\cite{cours_MF} \cite{cours_HF} \cite{data_fr4} \cite{data_PTFE}
 \bibliography{bib_hf}{}
 \bibliographystyle{plain}
 \newpage
