filtre passe-bas elliptique
Rédaction partie validation du filtre en éléments localisés (pas fini)

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -672,7 +672,15 @@ La structure a été décrite sous ADS, en passant des éléments $g_k$ normalis
 
 \subsection*{Validations}
 
-La sous-section qui suit s'intéresse à valider la conception du filtre passe-bas elliptique en éléments localisés avant la transposer en lignes micro-rubans.
+La sous-section qui suit s'intéresse à valider la conception du filtre passe-bas elliptique en éléments localisés avant la transposer en lignes micro-rubans. La simulation sous ADS est effectuée entre 0 et 8 GHz. Le résultat de la simulation est donné dans la figure (\ref{fig:validation_elliptique_localise}) ci-dessous. Le graphique à gauche représente la réponse du filtre sur l'ensemble de la plage fréquentielle simulée. Celui de droite est compris entre 0 et 3 GHz, il s'agit d'un agrandissement effectué pour visualiser la réponse dans la bande passante.\\
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=16cm]{../3synthPBas/elliptique/filtre_elliptique_localise.png}
+	\caption{Graphique représentant l'évolution du gain en dB du filtre passe-bas elliptique en éléments localisés en fonction de la fréquence}
+	\label{fig:validation_elliptique_localise}
+\end{figure}
 
 \newpage
 
